<resources>
    <string name="app_name">WeatherApp</string>
    <string name="action_settings">Settings</string>
    <string name="error_title">Oops, Sorry!</string>
    <string name="error_message">There\'s an error, please try again.</string>
    <string name="label_humidity">humidity</string>
    <string name="label_precipitation">rain</string>
    <string name="label_time">Time</string>
    <string name="dash_dash">--</string>
    <string name="summary_label">getting weather...</string>
    <string name="describer_icon">current weather</string>
    <string name="describer_degree">degree icon</string>
    <string name="title_activity_daily">DailyActivity</string>
    <string name="no_data">There\'s no data to display</string>
    <string name="key_daily">dailyKey</string>
    <string name="title_activity_hourly_forecast">Hourly</string>
    <string name="key_hourly">hourlyKey</string>
    <string name="mainTimeLabel">at %s it will be</string>
    <string name="mainPrecipLabel">%s %%</string>
</resources>
